# ritcher-map

./: .env.example  .gitignore  AGENTS.md  Dockerfile-db  agentdb.rvf  docker-compose.prod.yml  ruvector.db
.agents/skills/agentdb-memory-patterns/: SKILL.md
.agents/skills/agentdb-vector-search/: SKILL.md
.agents/skills/browser/: SKILL.md
.agents/skills/github-code-review/: SKILL.md
.agents/skills/github-multi-repo/: SKILL.md
.agents/skills/github-project-management/: SKILL.md
.agents/skills/github-release-management/: SKILL.md
.agents/skills/github-workflow-automation/: SKILL.md
.agents/skills/hooks-automation/: SKILL.md
.agents/skills/pair-programming/: SKILL.md
.agents/skills/reasoningbank-agentdb/: SKILL.md
.agents/skills/skill-builder/: SKILL.md
.agents/skills/source-command-agents-agent-capabilities/: SKILL.md
.agents/skills/source-command-agents-agent-types/: SKILL.md
.agents/skills/source-command-agents-health/: SKILL.md
.agents/skills/source-command-agents-list/: SKILL.md
.agents/skills/source-command-agents-logs/: SKILL.md
.agents/skills/source-command-agents-metrics/: SKILL.md
.agents/skills/source-command-agents-pool/: SKILL.md
.agents/skills/source-command-agents-spawn/: SKILL.md
.agents/skills/source-command-agents-status/: SKILL.md
.agents/skills/source-command-agents-stop/: SKILL.md
.agents/skills/source-command-claude-flow-help/: SKILL.md
.agents/skills/source-command-claude-flow-memory/: SKILL.md
.agents/skills/source-command-claude-flow-swarm/: SKILL.md
.agents/skills/source-command-sparc-ask/: SKILL.md
.agents/skills/source-command-sparc-code/: SKILL.md
.agents/skills/source-command-sparc-debug/: SKILL.md
.agents/skills/source-command-sparc-devops/: SKILL.md
.agents/skills/source-command-sparc-docs-writer/: SKILL.md
.claude/: launch.json  proven-config.json  settings.json
.claude-flow/: routing-outcomes.json
.claude-flow/data/: pending-insights.jsonl
.claude-flow/neural/: stats.json
.claude-flow/sessions/: current.json  session-1782455054683.json  session-1782463866244.json  session-1782505995694.json  session-1782518990267.json  session-1782558691156.json  session-1782565298906.json  session-1782572293740.json  session-1782572469618.json  session-1782585180094.json  session-1782591131552.json  session-1782598362884.json  session-1782603213871.json  session-1782635028818.json  session-1782640984232.json  session-1782674528570.json  session-1782716546257.json  session-1782747652200.json
.codex/: config.toml  hooks.json
.github/workflows/: accounts.yml  catalog.yml  gateway.yml  proto.yml  tile.yml  tiler.yml
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql
src/accounts/: Gemfile  README.md
src/catalog/: README.md  build.gradle
src/gateway/: go.mod  go.sum
src/tile/: Cargo.toml
src/tiler/: pyproject.toml
webapp/.claude/: proven-config.json
webapp/scripts/: crop_image.py  download_tiles.py  upload_tiles.py
(+123 files in other folders)
