[package]
name = "tile-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0" # bumped from 1.89: sqlx 0.9 requires rustc >= 1.94

[features]
# Expose InMemoryRepo (see repo.rs) outside of `#[cfg(test)]` via
# `--features memrepo` for local demos/examples. Declaring it also satisfies
# cargo's check-cfg lint (otherwise `feature = "memrepo"` warns as unknown).
memrepo = []

[dependencies]
"axum" = "0.8.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tls-rustls-ring-webpki: managed Postgres requires TLS (sslmode=require). Pure
# Rust with bundled Mozilla roots — no libssl at runtime (distroless has none)
# and no cmake at build time (which aws-lc-rs would need).
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "macros", "tls-rustls-ring-webpki"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
# TLS for the tile-origin client: TILE_ORIGIN is https in production (R2/CDN).
# ring + webpki roots to match the sqlx TLS choice (no cmake, no system certs).
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "webpki-tokio", "tls12"] }
http-body-util = "0.1"
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.18"
bytes = "1"
async-trait = "0.1"
# catalog.changed consumer. rskafka is a PURE-RUST Kafka client (no native
# librdkafka / cmake), so it builds on the distroless image with no apt deps.
# default-features = false drops the native lz4/zstd compression codecs we don't
# need: catalog publishes small, uncompressed protobuf messages.
rskafka = { version = "0.6.0", default-features = false }
# Generated CatalogChanged type (see build.rs). prost 0.13 to match prost-build.
prost = "0.14"

[build-dependencies]
# Pure-Rust proto codegen: protox parses .proto -> FileDescriptorSet (no protoc),
# prost-build turns that into Rust. protox 0.8 is the line built on prost 0.13;
# 0.9+ requires prost 0.14, which would split prost-types from prost-build 0.13.
prost-build = "0.13"
protox = "0.8.0"