[project]
name = "tiler-service"
version = "0.1.0"
description = "Game-map tile pyramid generator (Simple CRS, XYZ scheme)"
requires-python = ">=3.10"
dependencies = ["Pillow>=10", "protobuf>=6.30,<8"]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
kafka = ["kafka-python>=2.0"]
dev = ["pytest>=8"]

[project.scripts]
tiler = "tiler.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"